<resources>
    <string name="app_name">Careons</string>
    <string name="doctor_app_name">Doctor Careons</string>
    <string name="title_activity_home">Careons</string>
    <string name="sign_up">SIGN UP</string>
    <string name="congrats">Congratulations</string>
    <string name="logged">You are successfully logged in</string>
    <string name="welcome_onboarding_text">Kindly gather all your paper medical records for one last time and provide all your health information over the next few screens.</string>
    <string name="continue_onboarding">Lets Get Started</string>
    <string name="share">Invite Your Friends</string>
    <string name="short_desc"> Organize your health information, digitalize your medical records and get customised education about your health concerns with CAREONS </string>
    <string name="rate">Rate Us on Play Store</string>
    <string name="about_careons">About Careons</string>
    <string name="navigation_drawer_home">Home</string>
    <string name="navigation_drawer_vitals">Vitals</string>
    <string name="navigation_drawer_ud">Uploaded Documents</string>
    <string name="navigation_drawer_profile">Profile</string>
    <string name="navigation_drawer_logout">Logout</string>
    <string name="navigation_drawer_share">Share</string>
    <string name="navigation_drawer_about">About Us</string>
    <string name="navigation_drawer_legal">Terms and Conditions</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_login">Login</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="password">Password</string>
    <string name="send">Send</string>
    <string name="confirm">Confirm</string>
    <string name="done">Done</string>
    <string name="backToLogin">Go back to Login</string>
    <string name="forgot_password_success">You password has been retrieved and send to your email id</string>
    <string name="login_email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="retrieving_pwd">Retrieving Password ...</string>
    <string name="signing_in_message">Signing in ...</string>
    <string name="changing_password_message">Changing Password ...</string>
    <string name="creating_account_message">Creating Account ...</string>
    <string name="completing_profile_message">Completing Profile ...</string>
    <string name="syncing_message">Syncing Data ...</string>
    <string name="fetching_data_message">Fetching Data ...</string>
    <string name="welcome_message">Preparing for the best app experience ...</string>
    <string name="fetching_doc">Fetching Image  ...</string>
    <string name="uploading_doc">Uploading  ...</string>
    <string name="try_again_in_sometime">Please try again in some time</string>
    <string name="about">Careons (v1.0.9) is an easy-to-use app that helps you organize your health information and records and improve health care productivity.
        \n\nCareons is a comprehensive record-keeping and patient education app for your personal medical information designed to fit your busy schedule.
        \n\nIts the perfect replacement for unreliable paper records or various electronic systems that hold bits and pieces of your medical history.
        \n\nWith Careons, any and all information that is important to you is kept together in one place.

        \n\n<b>Medical record and more</b>
        \nAccess your complete medical record when you need it the most. Keep your medication details on hand and share with your provider. Areas for emergency contacts, health insurance, doctors contact information are all available.

        \n\n<b>Medical Information Portal</b>
        \nCareons offers you a single point source for all health related information you would ever need. Only standard and updated health information from US National Library of Medicine, simplified from complex medical terminology into easy to understand language especially for targeted patient education.

        \n\n<b>Digital File Cabinet</b>
        \nCareons devotes an area to image files that can be attached to your record.

        \n\n<b>Vitals From blood Pressure to Sugar</b>
        \nCareons provides a range of common vital record templates for you to track your test results. Chart test results with sophistication; with the graphing feature you can view multiple plots simultaneously, zoom to specific ranges and identify points of interest.

        \n\n<b>Its Secure</b>
        \nData is stored right on your device, and on secured remote servers. Only you can authorize and share your medical information when you want. So you dont need to worry about who can see your data at the other end of the line.

        \n\n<b>In case of emergency</b>
        \nYour medical information is a valuable aid for emergency doctors or first responders.

        \n\n<b>Get the word out</b>
        \nSharing your information has never been easier. Generate a report of all or part of your record and share it straightaway. Or you can always send your info to the printer to make a hard copy.

        \n\n<b>Get better care</b>
        \nYour doctors need all your information to give the best treatment. Send your health information to make sure your doctor understands your current medical information and is equipped with relevant summaries of your past visits as well
    </string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="health_education_desc"><b>Health is Wealth</b> \nAsk us about your health concerns.</string>
    <string name="hs_problems_empty">Proceed to Healthbook to add list of problems, allergies and medication to help us serve you better</string>
    <string name="read_more">Tap on the existing listed problem cards to know more or search for more problems</string>
    <string name="empty_hs_cta">Proceed to Healthbook</string>
    <string name="save_changes">Save Changes</string>
    <string name="allergy_type">Type :</string>
    <string name="allergy_name">Name :</string>
    <string name="allergy_kind_of_reaction">Kind of reaction</string>
    <string name="allergy_since_when">Since When ?</string>
    <string name="allergy_comments">Comments ...</string>
    <string name="allergy_food">Food</string>
    <string name="allergy_environment">Environment</string>
    <string name="allergy_medication">Medication</string>
    <string name="action_edit">Edit</string>
    <string name="action_cancel" translatable="false">Cancel</string>
    <string name="action_delete" translatable="false">Delete</string>
    <string name="action_expand">Expand</string>
    <string name="select_the_source">Select the source of allergy ?</string>
</resources>