<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- E D I T -->
    <group
        android:id="@+id/edit_menu">

        <item
            android:id="@+id/action_edit"
            android:orderInCategory="100"
            android:title="@string/action_edit"
            android:icon="@drawable/ic_hb_edit"
            app:showAsAction="always" />

    </group>

    <!-- D E L E T E -->
    <group
        android:id="@+id/delete_menu">

        <item
            android:id="@+id/action_delete"
            android:orderInCategory="100"
            android:title="@string/action_delete"
            android:icon="@drawable/ic_hb_delete"
            app:showAsAction="always" />

    </group>

    <!-- C A N C E L -->
    <group
        android:id="@+id/cancel_menu">

        <item
            android:id="@+id/action_cancel"
            android:orderInCategory="100"
            android:title="@string/action_cancel"
            android:icon="@drawable/ic_hb_cancel"
            app:showAsAction="always" />

    </group>

    <!-- D R O P D O W N -->
    <group
        android:id="@+id/toggle_menu">

        <item
            android:id="@+id/action_expand"
            android:orderInCategory="100"
            android:title="@string/action_expand"
            android:icon="@drawable/ic_dropdown"
            app:showAsAction="always" />

    </group>

</menu>