<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- N A V I G A T I O N   D R A W E R   M E N U -->
    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="Home"
            android:checked="true" />

        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_nav_vital"
            android:title="Notification" />

        <item
            android:id="@+id/nav_ch"
            android:icon="@drawable/ic_nav_upload"
            android:title="Consultation History" />

        <item
            android:id="@+id/nav_as"
            android:icon="@drawable/ic_nav_aboutus"
            android:title="Account Statement" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_nav_profile"
            android:title="@string/navigation_drawer_profile" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_aboutus"
            android:title="Settings" />

    </group>

    <!-- N A V I G A T I O N   D R A W E R   F O O T E R -->
    <item
        android:title="@string/about_careons">

        <menu>

            <group
                android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_nav_aboutus"
                    android:title="@string/navigation_drawer_about" />

                <item
                    android:id="@+id/nav_legal"
                    android:icon="@drawable/ic_nav_legal"
                    android:title="@string/navigation_drawer_legal" />

            </group>

        </menu>

    </item>

</menu>
