<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <!-- D E S C R I P T I V E   T E X T -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:textSize="14sp"
        android:lineSpacingExtra="2dp"
        android:text="@string/health_education_desc"/>

    <!-- S E A R C H   B A R -->
    <include
        android:id="@+id/search_bar"
        layout="@layout/content_health_search" />

    <!-- D I V I D E R -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey"/>

    <!-- L O A D E R -->
    <include
        layout="@layout/item_loader" />

    <!-- N O   E N T R Y   C A S E -->
    <LinearLayout
        android:id="@+id/hs_problems_empty"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="25dp"
            android:lineSpacingExtra="3dp"
            android:text="@string/hs_problems_empty"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/empty_hs_cta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/empty_hs_cta"
            android:padding="5dp"
            android:textSize="15sp"/>

    </LinearLayout>


    <!-- D A T A -->
    <LinearLayout
        android:id="@+id/hs_problems"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- K N O W   M O R E -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/read_more"
            android:textSize="14sp"
            android:lineSpacingExtra="4sp"
            android:padding="15dp"
            android:background="#20000000"
            android:textColor="@color/grey"/>

        <!-- L I S T   O F   P A T I E N T   E D U C A T I O N -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/hs_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"/>

    </LinearLayout>

</LinearLayout>