<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Patient.Activity.Others.ChangePasswordActivity"
    tools:showIn="@layout/activity_change_password"
    android:background="@color/white">

    <!-- C O N T E N T -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        android:padding="10dp">

        <!-- C U R R E N T   P A S S W O R D -->
        <EditText
            android:id="@+id/current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_password"
            android:background="@drawable/rectangle_editfield_grey_white"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"
            android:textColor="@color/card_text_color"
            android:textColorHint="@color/card_text_color"
            android:textSize="13sp"/>


        <!-- N E W   P A S S W O R D -->
        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:background="@drawable/rectangle_editfield_grey_white"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"
            android:textColor="@color/card_text_color"
            android:textColorHint="@color/card_text_color"
            android:textSize="13sp"/>


        <!-- C O N F I R M   P A S S W O R D -->
        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:background="@drawable/rectangle_editfield_grey_white"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"
            android:textColor="@color/card_text_color"
            android:textColorHint="@color/card_text_color"
            android:textSize="13sp"/>

    </LinearLayout>

</RelativeLayout>
